added new folder

--- a/WebAppFile/ImageSlider.html
+++ b/WebAppFile/ImageSlider.html
@@ -40,7 +40,7 @@
       padding: 10px 20px;
       margin: 0 10px;
       background: #007bff;
-      color: white;
+      color: rgb(117, 5, 5);
       border: none;
       border-radius: 6px;
       font-size: 16px;
@@ -64,7 +64,7 @@
 
   <script>
     const images = [
-      "C:\Users\renuk\Downloads\WhatsApp Image 2025-04-08 at 1.47.33 AM (2).jpeg/600x400?text=Image+1",
+      "C:\Users\renuk\Downloads\WhatsApp Image 2025-04-08 at 1.47.33 AM (2).jpeg",
       "C:\Users\renuk\Downloads\WhatsApp Image 2025-04-08 at 1.47.33 AM (2).jpeg/600x400?text=Image+2",
       "C:\Users\renuk\Downloads\WhatsApp Image 2025-04-08 at 1.47.33 AM (2).jpeg600x400?text=Image+3/600x400?text=Image+3"
     ];
